# Forge

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  appveyor.yml
.github/: PULL_REQUEST_TEMPLATE.md
assets/icons/: icons.qrc
cmake/: CompilerConfiguration.cmake
source/: CMakeLists.txt  main.cpp
